# arxiv-base

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  Dockerfile-base  Dockerfile-with-git  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  app.py  conftest.py  mypy.ini  nose2.cfg  pyproject.toml  pytest.ini  setup.py  test.db-journal  update-docs.sh  upload_static_assets.py
.github/workflows/: arxiv-functions-triggers.yml  lint-test-package.yml  pr_warn_on_db_changes.yaml  pullreqeust_tests.yaml  pullrequest_tests.yaml  qa-models-triggers.yml  qa-triggers.yml
arxiv/: __init__.py  license.py  taxonomy.py
arxiv-functions/: README.md  pyproject.toml
arxiv-functions/arxiv_functions/: config.py  exception.py  utils.py
arxiv-functions/tests/: test_utils.py
arxiv/auth/: README.md  app.py  auth_bridge.py  conftest.py  domain.py  helpers.py  jwt.py  pyproject.toml  user_claims.py  user_claims_to_legacy.py
arxiv/auth/arxiv_auth/: __init__.py
arxiv/auth/arxiv_auth/auth/: __init__.py  decorators.py
arxiv/auth/arxiv_auth/legacy/: accounts.py  models.py  sessions.py
arxiv/auth/arxiv_auth/legacy/tests/: test_accounts.py  test_authenticate.py  test_endorsement_auto.py
arxiv/auth/arxiv_auth/tests/: test_domain.py  test_helpers.py
arxiv/auth/auth/: __init__.py  decorators.py  exceptions.py  middleware.py  scopes.py  tokens.py
arxiv/auth/auth/sessions/: __init__.py  ng_session_types.py  store.py
arxiv/auth/auth/sessions/tests/: __init__.py  test_integration.py  test_unit.py
arxiv/auth/auth/tests/: __init__.py  test_decorators.py  test_extension.py  test_middleware.py  test_tokens.py
arxiv/auth/legacy/: __init__.py  accounts.py  authenticate.py  cookies.py  endorsements.py  exceptions.py  passwords.py  sessions.py  util.py
arxiv/auth/legacy/tests/: __init__.py  test_accounts.py  test_authenticate.py  test_bootstrap.py  test_endorsement_auto.py  test_endorsements.py  test_passwords.py  test_permanent_token.py  test_sessions.py  test_util.py  util.py
arxiv/auth/openid/: README.md  oidc_idp.py
arxiv/auth/openid/tests/: test_keycloak.py  toy_flask.py
arxiv/auth/tests/: __init__.py  test_db.py  test_domain.py  test_helpers.py  test_oidc_idp_client.py
arxiv/authors/: __init__.py
arxiv/base/: __init__.py  agent.py  alerts.py  app_tests.py  config.py  context_processors.py  converter.py  exceptions.py  factory.py  filters.py  globals.py  logging.py  messages.py  routes.py  urls.py
arxiv/browse/: filters.py  setup_jinja_for_abs.py  template_loader.py
arxiv/config/: __init__.py
arxiv/db/: __init__.py  arxiv-db-metadata.yaml  arxiv_db_schema.sql  arxiv_holidays_seed.sql  arxiv_publish_holidays_seed.sql  column_types.py  models.py  models.py-orig  orig_models.py  types.py
arxiv/dev_environment/: build.sh  main.tf
arxiv/document/: __init__.py  exceptions.py  iteration.py  metadata.py  parse_abs.py  version.py
arxiv/files/: __init__.py  anypath.py  fileformat.py  key_patterns.py  object_store.py  path_mapper.py
arxiv/formats/: __init__.py  test_formats.py
arxiv/forms/: __init__.py  csrf.py  test_forms.py  tests.py
arxiv/html_processing/: __init__.py
arxiv/identifier/: __init__.py  iteration.py  test_arxiv_identifier.py  test_identifier.py
arxiv/integration/: __init__.py  meta.py  tests.py
arxiv/license/: __init__.py  tests.py
arxiv/mail/: __init__.py  mail.py
arxiv/metadata/: __init__.py  all_caps_words.py  checksum.py  metacheck.py
arxiv/ops/: __init__.py  fastly_gs_logs_to_cit.py  fastly_hourly_stats.py
arxiv/release/: README.md  __init__.py  tag_check.py  (+2 more)
baseui/: __init__.py  factory.py  routes.py
css/: arxivstyle.css  arxivstyle.css.map
deploy/: Dockerfile-fastlylogingest  deploy_fourohfour.sh  docker_build_and_push.sh  push_base_image.sh  push_fourohfour_image.sh
development/: Makefile  README.md  arxiv_db_schema.sql  arxiv_schema_dump.sql  create_arxiv_schema.sh  db_codegen.py  db_codegen_app.py  dump-schema.sh  extract_class_n_table.py  load_arxiv_db_schema.py  populate_arxiv_db.py  run_mysql_container.py
development/sqlacodegen/: ARXIV-README.md  README.rst  pyproject.toml
development/sqlacodegen/src/sqlacodegen/: cli.py  generators.py  mysql_util.py
docs/: shared-chrome.md
fourohfour/: Dockerfile  Pipfile  test_404.py  tests.py  uwsgi.ini  wsgi.py
gcp/service_auth/: .gitignore  README.md  pyproject.toml  pytest.ini
gcp/service_auth/gcp_service_auth/: service_auth.py
gcp/service_auth/tests/: test_get_token.py
qa/: Makefile  README.md  pyproject.toml
qa-models/: pyproject.toml
qa-models/qa_models/: checks.py
qa-models/tests/: test_report_models.py
qa/checks/: __init__.py  base.py  content.py  metadata_validation.py
qa/checks/models/: __init__.py
qa/qa/checks/: __init__.py  base.py  content.py  metadata.py  metadata_validation.py  models.py
qa/qa/checks/fulltext/: text_checks.py
qa/qa/checks/generic/: all_caps_words.py  author_name.py  text.py
qa/qa/checks/metadata/: abstract.py  acm_class.py  authors.py  comments.py  doi.py  journal_ref.py  msc_class.py  oversize.py  report_num.py  title.py  withdrawal.py
qa/qa/checks/models/: __init__.py  inputs.py  results.py
qa/qa/checks/utils/: checksum.py
qa/qa/metadata_checks/: base.py  generic.py  models.py  title.py
qa/qa/reports/models/: __init__.py  base.py  fulltext.py
qa/qa_models/: reports.py
qa/tests/: test_checks.py
qa/tests/checks/: check_unique_ids.py  test_checksum.py
qa/tests/checks/fulltext/: test_text.py
qa/tests/checks/generic/: test_text.py
qa/tests/checks/metadata/: test_abstract.py  test_acm_class.py  test_authors.py  test_comments.py  test_doi.py  test_journal_ref.py  test_msc_class.py  test_oversize.py  test_report_num.py  test_title.py  test_withdrawals.py
qa/tests/reports/: test_report_models.py
qa/tests/utils/: test_checksum.py
requirements/: test.txt
sass/: _custom.sass  _overrides.sass
templates/: base.html  testpage.html
tests/: docker-compose.yml  docker_tests.sh  lintstats.sh  run_app_tests.py  test_arxiv_taxonomy.py  test_arxiv_util_schema.py  test_utf8_columns.py
(+318 files in other folders)
