[tool.poetry]
name = "arxiv-base"
version = "1.0.1"
description = "Common code for arXiv Cloud"
authors = ["arxiv.org"]
packages = [
   { include = "arxiv" },
   { include = "arxiv/py.typed" },
   { include = "gcp/service_auth" }
   ]
include = [
   "arxiv/base/static/*",
   "arxiv/base/templates/*",
   "arxiv/mail/templates/*",
   "development/test-data/*",
   "development/*",
]
exclude = [
   "development/sqlacodegen/*",
]
   
[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
flask = "3.0.*"
pytz = "*"
wtforms = "*"
bleach = "*"
fastly="*"
flask-s3 = "*"
typing-extensions = "*"
markupsafe = "*"
mysqlclient = ">=2.1"
google-cloud-storage = "^2.5.0"
google-cloud-logging = "^3.8.0"
google-cloud-pubsub = "^2.18.4"
sqlalchemy = "~=2.0.27"
google-auth = "^2.23.4"
google-cloud-monitoring = "^2.16.0"
fire = "^0.5.0"
validators = "*"
sphinx = { version = "*", optional = true }
sphinxcontrib-websupport = { version = "*", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
psycopg2-binary = { version = ">=2.9.9", optional = true  }
mimesis = "*"
retry = "^0.9.2"
pyjwt = "^2.9.0"
redis = "==2.10.6"
redis-py-cluster = "==1.3.6"
setuptools = "^70.0.0"
pydantic-settings = "^2.5.2"
jwcrypto = "^1.5.6"
ruamel-yaml = "^0.18.6"

[tool.poetry.dev-dependencies]
pydocstyle = "*"
mypy = "*"
pytest = "*"
pytest-mock = "^3.8.2"
pytest-cov = "*"
hypothesis = "*"
fakeredis = "*"
click = "*"
sqlmodel = "*"
sqlalchemy-citext = "*"
geoalchemy2 = "*"
pgvector = "*"

[tool.poetry.extras]
sphinx = [ "sphinx", "sphinxcontrib-websupport", "sphinx-autodoc-typehints" ]
postgres = ["psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
selenium = "^4.23.0"
types-requests = "^2.32.0.20240712"
autopep8 = "^2.3.1"
inflect = "^7.4.0"
sqlmodel = "^0.0.22"
geoalchemy2 = "^0.15.2"
pgvector = "^0.3.5"
black = "^24.10.0"
libcst = "^1.5.0"
functions-framework = "^3.8.1"
google-cloud-bigquery = "^3.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
