[tool.poetry]
name = "arxiv-base"
version = "1.0.1"
description = "Common code for arXiv Cloud"
authors = ["arxiv.org"]

packages = [
   { include = "arxiv" },
   { include = "arxiv/py.typed" },
   { include = "gcp/service_auth" }
   ]

include = [
   "arxiv/base/static/*",
   "arxiv/base/templates/*",
   "arxiv/mail/templates/*",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "==1.10.*"
flask = "3.0.*"
pytz = "*"
wtforms = "*"
bleach = "*"
fastly="*"
flask-s3 = "*"
typing-extensions = "*"
markupsafe = "*"
mysqlclient = ">=2.1"
google-cloud-storage = "^2.5.0"
google-cloud-logging = "^3.8.0"
google-cloud-pubsub = "^2.18.4"
sqlalchemy = "~=2.0.27"
google-auth = "^2.23.4"
google-cloud-monitoring = "^2.16.0"
fire = "^0.5.0"
validators = "*"
sphinx = { version = "*", optional = true }
sphinxcontrib-websupport = { version = "*", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
psycopg2-binary = { version = ">=2.9.9", optional = true  }
retry = "^0.9.2"
pyjwt = "^2.9.0"
redis = "==2.10.6"
redis-py-cluster = "==1.3.6"
setuptools = "^70.0.0"
jwcrypto = "^1.5.6"
ruamel-yaml = "^0.18.6"
gcld3 = { version = "^3.0.13", optional = true }
wheel = { version = "^0.45.1", optional = true }


[tool.poetry.extras]
sphinx = [ "sphinx", "sphinxcontrib-websupport", "sphinx-autodoc-typehints" ]
postgres = ["psycopg2-binary"]
qa = [ "gcld3", "wheel"]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
black = "^24.10.0"
click = "*"
fakeredis = "*"
functions-framework = "^3.8.1"
geoalchemy2 = "^0.15.2"
google-cloud-bigquery = "^3.26.0"
hypothesis = "*"
inflect = "^7.4.0"
libcst = "^1.5.0"
mimesis = "*"
mypy = "*"
pgvector = "^0.3.5"
pydocstyle = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "^3.8.2"
selenium = "^4.23.0"
sqlalchemy-citext = "*"
sqlmodel = "^0.0.22"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
