[tool.poetry]
name = "arxiv-base"
version = "1.0.1"
description = "Common code for arXiv Cloud"
authors = ["arxiv.org"]

packages = [
   { include = "arxiv" },
   { include = "arxiv/py.typed" },
   { include = "gcp/service_auth" }
   ]

include = [
   "arxiv/base/static/*",
   "arxiv/base/templates/*",
   "arxiv/mail/templates/*",
   "development/test-data/*",
   "development/*",
]
exclude = [
   "development/sqlacodegen/*",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.7"
flask = "3.0.*"
pytz = "*"
wtforms = "*"
bleach = "*"
fastly="*"
flask-s3 = "*"
typing-extensions = "*"
markupsafe = "*"
mysqlclient = ">=2.1"
google-cloud-storage = "^3.4.1"
google-cloud-logging = "^3.8.0"
google-cloud-pubsub = "^2.18.4"
sqlalchemy = "~=2.0.27"
google-auth = "^2.23.4"
google-cloud-monitoring = "^2.9.2"
fire = "^0.6.0"
validators = "*"
sphinx = { version = "*", optional = true }
sphinxcontrib-websupport = { version = "*", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
psycopg2-binary = { version = ">=2.9.9", optional = true  }
retry = "^0.9.2"
pyjwt = "^2.4.0"
redis = "==2.10.6"
redis-py-cluster = "==1.3.6"
setuptools = "^78.1.1"
pydantic-settings = "^2.5.2"
jwcrypto = "^1.5.1"
ruamel-yaml = "^0.18.6"
gcld3 = { version = "^3.0.13", optional = true }
wheel = { version = "^0.45.1", optional = true }


[tool.poetry.extras]
sphinx = [ "sphinx", "sphinxcontrib-websupport", "sphinx-autodoc-typehints" ]
postgres = ["psycopg2-binary"]
qa = [ "gcld3", "wheel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
