[project]
name = "qa-models"
version = "0.1.0"
description = "Models for QA reports"
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "arxiv-base",
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff",
    "ty",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
arxiv-base = { git = "https://github.com/arXiv/arxiv-base" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
