[project]
name = "qa"
version = "0.1.0"
description = "QA checks and reports"
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "arxiv-base",
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff",
    "ty",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
arxiv-base = { git = "https://github.com/arXiv/arxiv-base", branch = "master" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
