[tool.poetry]
name = "arxiv-auth"
version = "1.1.0"
description = "Auth libraries for arXiv."
authors = ["arxiv.org"]

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "adb431b8234e08578d58fa4f5ef504ad54a5860e"}
pycountry = "*"
mimesis = "*"
mysqlclient = "*"
python-dateutil = "*"
pyjwt = "*"
redis = "==2.10.6"
redis-py-cluster = "==1.3.6"
retry = "^0.9.2"
setuptools = "^70.0.0"
        
[tool.poetry.dev-dependencies]
pytest = "*"
hypothesis = "*"
fakeredis = "*"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
mimesis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
